--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "prepare": "node prepare.js",
-    "start": "ts-node -T index.ts"
+    "start": "ts-node -T index.ts",
+    "update": "ts-node -T update.ts"
   },
   "dependencies": {
     "cross-env": "^7.0.2",
